fixed scrollbar in help-panel

--- a/stylus/help.styl
+++ b/stylus/help.styl
@@ -4,7 +4,8 @@
   box-sizing border-box
   width 100%
   height 50%
-  overflow auto
+  overflow-y auto
+  overflow-x hidden
   padding 10px 20px
   position fixed
   right calc(-100% + 66px)
